--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,17 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+:focus {
+  outline: 0.375rem double black;
+  background-color: yellow;
+  padding: 2px;
+  box-shadow: 0 0 0 0.25rem white;
+  border-radius: 0.125rem;
+}
+
 .inter-typo {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
@@ -12,13 +26,11 @@ a {
 }
 
 body {
-  display: flex;
-  max-width: 480px;
-  width: 100%;
-  flex-direction: column;
-  margin: 0 auto;
   font-family: "Inter", sans-serif;
   background-color: #f0f0f0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .nav-container {
@@ -71,11 +83,11 @@ body {
   padding: 40px 20px 0;
 }
 .hero .tag {
-  justify-content: center;
-  border-radius: 10px;
   background-color: #FB43B0;
-  align-self: start;
   background-color: #4962E9;
+  justify-content: center;
+  align-self: start;
+  border-radius: 10px;
   padding: 10px;
   font: 400 16px/112.5% Inter, sans-serif;
 }
@@ -106,18 +118,25 @@ body {
   position: relative;
   padding: 20px;
 }
-.project-card .label-text {
-  margin: 0;
-}
 .project-card .project-label {
   color: #f0f0f0;
-  background-color: #0f0f0f;
+  background-color: #FB43B0;
+  display: flex;
   position: absolute;
   margin: 20px;
-  display: flex;
+  padding: 0 10px;
+  width: 180px;
   justify-content: center;
-  align-content: center;
-  width: 200px;
+  opacity: 90%;
+  gap: 1em;
+}
+.project-card .project-label .label-text {
+  align-self: center;
+  margin: 0;
+}
+.project-card .project-label .label-icon {
+  align-self: center;
+  width: 30px;
 }
 .project-card .project-image {
   width: 100%;
