--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -10,6 +10,19 @@
 // .dark-mode-toggle.active {
 //     background-color: #000;
 // }
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+:focus {
+    outline: .375rem double black;
+    background-color: yellow;
+    padding: 2px;
+    box-shadow: 0 0 0 .25rem white;
+    border-radius: .125rem;
+  }
 
 .inter-typo {
     font-family: "Inter", sans-serif;
@@ -32,13 +45,13 @@ a {
     color: $black-color;
 }
 body {
-    display: flex;
-    max-width: 480px;
-    width: 100%;
-    flex-direction: column;
-    margin: 0 auto;
     font-family: $font-stack;
     background-color: $white-color;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    // max-width: 480px;
+    // width: 100%;
 }
 
 // @note HEADER
@@ -86,17 +99,17 @@ body {
     }
     }
     
-    .hero {
-      display: flex;
+.hero {
+    display: flex;
       width: 100%;
       flex-direction: column;
       padding: 40px 20px 0;
         .tag {
+            background-color: $accent-color;
+            background-color: $secondary-color;
           justify-content: center;
-          border-radius: 10px;
-          background-color: $accent-color;
           align-self: start;
-          background-color: $secondary-color;
+          border-radius: 10px;
           padding: 10px;
           font: 400 16px/112.5% Inter, sans-serif;
         }
@@ -126,22 +139,31 @@ body {
     .project-card{
         position: relative;
         padding: 20px;
-
-        .label-text{
-            margin: 0;
-        }
+    
         .project-label {
             color: $white-color;
-            background-color: $black-color;
+            background-color: $accent-color;
+            display: flex;
             position: absolute;
             margin: 20px;
-            display: flex;
+            padding: 0 10px;
+            width: 180px;
             justify-content: center;
-            align-content: center;
-            width: 200px;
+            opacity: 90%;
+            gap: 1em;
+            // filter: blur(5px);
+            
+            .label-text{
+                align-self: center;
+                margin: 0;
+            }
+            .label-icon {
+                align-self: center;
+                width: 30px;
+            }
         }
         .project-image{
             width: 100%;
             border-radius: 20px;
         }
-    }
+}
