--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* ! Reset */
 * {
   padding: 0;
   margin: 0;
@@ -141,4 +142,22 @@ body {
 .project-card .project-image {
   width: 100%;
   border-radius: 20px;
+}
+
+.card {
+  padding: 20px;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  overflow: hidden;
+  margin: 0 15px 30px 15px;
+  min-height: 450px;
+  max-width: 480px;
+}
+
+.card__img {
+  min-height: 200px;
+  display: block;
+  background-position: center center;
+  background-size: cover;
+  margin: -20px -20px 20px -20px;
 }
