--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,14 +5,6 @@
   box-sizing: border-box;
 }
 
-:focus {
-  outline: 0.375rem double black;
-  background-color: yellow;
-  padding: 2px;
-  box-shadow: 0 0 0 0.25rem white;
-  border-radius: 0.125rem;
-}
-
 .inter-typo {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
@@ -21,17 +13,39 @@
   font-variation-settings: "slnt" 0;
 }
 
+body, html {
+  font-family: "Inter", sans-serif, Arial, Helvetica, sans-serif;
+  background-color: #f0f0f0;
+  font-size: 16px;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 a {
   text-decoration: none;
   color: #0f0f0f;
 }
 
-body {
-  font-family: "Inter", sans-serif;
-  background-color: #f0f0f0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6, p, ol, ul {
+  margin: 0;
+  padding: 0;
+}
+
+ol, ul {
+  list-style-type: none;
+}
+
+img {
+  height: auto;
+}
+
+h1 {
+  font-size: 4rem;
 }
 
 .nav-container {
@@ -141,7 +155,7 @@ body {
 }
 .project-card .project-image {
   width: 100%;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 
 .card {
@@ -151,7 +165,6 @@ body {
   overflow: hidden;
   margin: 0 15px 30px 15px;
   min-height: 450px;
-  max-width: 480px;
 }
 
 .card__img {
