--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -12,18 +12,7 @@
 // }
 /* ! Reset */
 
-body, html{ font-family: $font-stack, Arial, Helvetica, sans-serif; font-size: 16px; box-sizing: border-box; margin: 0; padding: 0;}
-*,*:before,*:after{ box-sizing: border-box; }
-h1,h2,h3,h4,h5,h6, p, ol, ul {margin: 0;padding: 0;}
-ol,ul {list-style-type: none;}
-img{height: auto;}
-h1{font-size: 4rem;} 
-// h2{font-size: 2rem;} 
-// h3{font-size: 1rem;} 
-// h4{font-size: 1rem;}
-// h5{font-size: 0.8rem;}
-// h6{font-size: 0.6rem;}
-a{text-decoration:none}
+
 
 * {
     padding: 0;
@@ -31,13 +20,13 @@ a{text-decoration:none}
     box-sizing: border-box;
 }
 
-:focus {
-    outline: .375rem double black;
-    background-color: yellow;
-    padding: 2px;
-    box-shadow: 0 0 0 .25rem white;
-    border-radius: .125rem;
-  }
+// :focus {
+//     outline: .375rem double black;
+//     background-color: yellow;
+//     padding: 2px;
+//     box-shadow: 0 0 0 .25rem white;
+//     border-radius: .125rem;
+//   }
 
 .inter-typo {
     font-family: "Inter", sans-serif;
@@ -55,15 +44,25 @@ $secondary-color: #4962E9;
 $black-color: #0f0f0f;
 $white-color: #f0f0f0;
 
+body, html{ font-family: $font-stack, Arial, Helvetica, sans-serif; background-color: $white-color;  font-size: 16px; box-sizing: border-box; margin: 0; padding: 0;
+// display: flex; flex-direction: column; justify-content: center; align-items: center;
+    // max-width: 768px;
+    // width: 100%;
+}
 a {
     text-decoration: none;
     color: $black-color;
 }
-body {
-    font-family: $font-stack; background-color: $white-color; display: flex; flex-direction: column; justify-content: center;
-    // max-width: 480px;
-    // width: 100%;
-}
+*,*:before,*:after{ box-sizing: border-box; }
+h1,h2,h3,h4,h5,h6, p, ol, ul {margin: 0;padding: 0;}
+ol,ul {list-style-type: none;}
+img{height: auto;}
+h1{font-size: 4rem;} 
+// h2{font-size: 2rem;} 
+// h3{font-size: 1rem;} 
+// h4{font-size: 1rem;}
+// h5{font-size: 0.8rem;}
+// h6{font-size: 0.6rem;}
 
 // @note HEADER
 .nav-container{ justify-content: space-between;    align-items: center;    display: flex;    width: 100%;    gap: 20px;    font-size: 16px;    color: #000;    font-weight: 400; line-height: 112.5%;    padding: 20px 20px 0;
@@ -165,9 +164,9 @@ body {
         }
         .project-image{
             width: 100%;
-            border-radius: 20px;
+            border-radius: 10px;
         }
 }
 
-.card{padding:20px;box-shadow: 0 5px 20px rgba(0,0,0,.1);border-radius: 10px;overflow: hidden;margin: 0 15px 30px 15px; min-height: 450px; max-width: 480px;}
+.card{padding:20px;box-shadow: 0 5px 20px rgba(0,0,0,.1);border-radius: 10px;overflow: hidden;margin: 0 15px 30px 15px; min-height: 450px; }
 .card__img{min-height:200px; display: block;background-position: center center; background-size:cover;margin: -20px -20px 20px -20px;}
