--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -12,8 +12,6 @@
 // }
 /* ! Reset */
 
-
-
 * {
     padding: 0;
     margin: 0;
@@ -44,10 +42,11 @@ $secondary-color: #4962E9;
 $black-color: #0f0f0f;
 $white-color: #f0f0f0;
 
-body, html{ font-family: $font-stack, Arial, Helvetica, sans-serif; background-color: $white-color;  font-size: 16px; box-sizing: border-box; margin: 0; padding: 0;
-// display: flex; flex-direction: column; justify-content: center; align-items: center;
-    // max-width: 768px;
-    // width: 100%;
+body { 
+    background-color: $white-color;
+    font-family: $font-stack, Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    width: 100%;
 }
 a {
     text-decoration: none;
@@ -100,10 +99,10 @@ h1{font-size: 4rem;}
     }
     
 .hero {
+    width: 100%;
+    flex-direction: column;
+    padding: 40px 20px 0;
     display: flex;
-      width: 100%;
-      flex-direction: column;
-      padding: 40px 20px 0;
         .tag {
             background-color: $accent-color;
             background-color: $secondary-color;
