--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,6 @@ body {
   background-color: #f0f0f0;
   font-family: "Inter", sans-serif, Arial, Helvetica, sans-serif;
   font-size: 16px;
-  width: 100%;
 }
 
 a {
@@ -47,20 +46,18 @@ h1 {
 }
 
 .nav-container {
-  justify-content: space-between;
-  align-items: center;
-  display: flex;
   width: 100%;
   gap: 20px;
+  display: flex;
+  align-items: center;
   font-size: 16px;
+  justify-content: space-between;
   color: #000;
   font-weight: 400;
-  line-height: 112.5%;
   padding: 20px 20px 0;
 }
 .nav-container .logo {
   width: 40px;
-  height: 40px;
 }
 .nav-container li, .nav-container ul {
   list-style-type: none;
@@ -90,19 +87,17 @@ h1 {
 }
 
 .hero {
-  width: 100%;
-  flex-direction: column;
-  padding: 40px 20px 0;
   display: flex;
+  flex-direction: column;
 }
 .hero .tag {
   background-color: #FB43B0;
   background-color: #4962E9;
-  justify-content: center;
-  align-self: start;
   border-radius: 10px;
   padding: 10px;
-  font: 400 16px/112.5% Inter, sans-serif;
+  font: "Inter", sans-serif, sans-serif;
+  justify-content: center;
+  align-self: start;
 }
 
 .links {
@@ -111,7 +106,6 @@ h1 {
   width: 100%;
   flex-direction: column;
   justify-content: center;
-  padding: 0 20px;
 }
 .links .social-icons {
   justify-content: center;
@@ -127,46 +121,23 @@ h1 {
   width: 30px;
 }
 
-.project-card {
-  position: relative;
-  padding: 20px;
-}
-.project-card .project-label {
-  color: #f0f0f0;
-  background-color: #FB43B0;
+.projects {
   display: flex;
-  position: absolute;
-  margin: 20px;
-  padding: 0 10px;
-  width: 180px;
+  justify-items: center;
   justify-content: center;
-  opacity: 90%;
-  gap: 1em;
-}
-.project-card .project-label .label-text {
-  align-self: center;
-  margin: 0;
-}
-.project-card .project-label .label-icon {
-  align-self: center;
-  width: 30px;
-}
-.project-card .project-image {
-  width: 100%;
-  border-radius: 10px;
 }
 
 .card {
-  padding: 20px;
+  padding: 40px;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   overflow: hidden;
-  margin: 0 15px 30px 15px;
-  min-height: 450px;
 }
 
 .card__img {
   min-height: 200px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   display: block;
   background-position: center center;
   background-size: cover;
