--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -189,3 +189,13 @@ h1{font-size: 3rem;} h2{font-size: 1.8rem;} h3{font-size: 1.2rem;} h4{font-size:
             display: flex;
             justify-content: center;
         }
+        footer{
+            display: flex;
+            justify-content: space-between;
+            color: $black-color;
+            ul{
+                list-style-type: none;
+                padding: 0;
+                margin: 0;  
+            }
+        }
