--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-/* ! Reset */
 * {
   padding: 0;
   margin: 0;
@@ -14,7 +13,7 @@
 }
 
 body {
-  background-color: #f0f0f0;
+  background-color: #fdfdfd;
   font-family: "Inter", sans-serif, Arial, Helvetica, sans-serif;
   font-size: 16px;
 }
@@ -22,6 +21,12 @@ body {
 a {
   text-decoration: none;
   color: #0f0f0f;
+}
+a :hover {
+  color: #FB43B0;
+}
+a :active {
+  color: #4962E9;
 }
 
 *, *:before, *:after {
@@ -87,16 +92,12 @@ h6 {
   display: flex;
   gap: 10px;
 }
-.nav-container .menu-container .toggle-button {
-  aspect-ratio: 1;
-  width: 25px;
-}
-.nav-container .menu-container .btn {
+.nav-container .btn {
   font-family: "Inter", sans-serif;
   justify-content: center;
   border-radius: 10px;
   background-color: #FB43B0;
-  color: #f0f0f0;
+  color: #fdfdfd;
   align-self: stretch;
   white-space: nowrap;
   padding: 5px;
@@ -105,15 +106,26 @@ h6 {
 .hero {
   display: flex;
   flex-direction: column;
+  padding: 0px;
 }
-.hero .tag {
-  background-color: #FB43B0;
-  background-color: #4962E9;
+.hero .tags {
+  display: flex;
+  font-size: xx-small;
+  gap: 10px;
+  color: #fdfdfd;
   border-radius: 10px;
-  padding: 10px;
-  font: "Inter", sans-serif, sans-serif;
   justify-content: center;
   align-self: start;
+}
+.hero .tags .tag-1 {
+  background-color: #4962E9;
+  padding: 10px;
+  border-radius: 10px;
+}
+.hero .tags .tag-2 {
+  background-color: #4962E9;
+  padding: 10px;
+  border-radius: 10px;
 }
 
 .links {
@@ -126,6 +138,7 @@ h6 {
 .links .social-icons {
   justify-content: center;
   display: flex;
+  margin-top: 20px;
   gap: 10px;
 }
 .links .link-linkedin,
@@ -146,7 +159,6 @@ h6 {
   overflow: hidden;
   background-color: transparent;
   border: none;
-  height: auto;
 }
 .projects-section .card .card__img {
   min-height: 200px;
@@ -159,23 +171,41 @@ h6 {
 }
 
 .card:hover {
+  color: #FB43B0;
   background-color: white;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
   transform: scale(1.1); /* Modifica la grandezza dell'immagine */
   transition: transform 0.2s ease;
+  z-index: 2;
+}
+
+.card:active {
+  color: #4962E9;
 }
 
 .altro {
   display: flex;
   justify-content: center;
+  margin-top: 20px;
 }
 
 footer {
+  background-color: rgba(24, 103, 139, 0.1176470588);
+}
+
+.footer {
   display: flex;
   justify-content: space-between;
   color: #0f0f0f;
+  margin-top: 20px;
+  padding: 40px;
 }
-footer ul {
+.footer p {
+  color: #0f0f0f;
+  font-size: smaller;
+  opacity: 80%;
+}
+.footer ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
