--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@ h6 {
   align-self: start;
 }
 .hero .tags .tag-1 {
-  background-color: #4962E9;
+  background-color: #18678b;
   padding: 10px;
   border-radius: 10px;
 }
