--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -102,7 +102,7 @@ h1{font-size: 3rem;} h2{font-size: 1.8rem;} h3{font-size: 1.2rem;} h4{font-size:
             justify-content: center;
             align-self: start;
             .tag-1 {
-                background-color: $secondary-color;
+                background-color: $primary-color;
                 padding: 10px;
                 border-radius: 10px;
 
