--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -193,3 +193,11 @@ footer{
     }
 }
 
+// @media only screen and (max-width: 450) {
+//     body {
+//       .hero{
+//         margin: 0;
+//         color: red;
+//       }
+//     }
+//   }
