--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,3 +210,10 @@ footer {
   padding: 0;
   margin: 0;
 }
+
+@media only screen and (max-width: 450) {
+  body .hero {
+    margin: 0;
+    color: red;
+  }
+}
