--- a/assets/css/style-form.css
+++ b/assets/css/style-form.css
@@ -1,6 +1,6 @@
 * {
   padding: 0;
-  margin: 0;
+  margin: 0px;
   box-sizing: border-box;
 }
 
@@ -14,18 +14,26 @@ box-sizing: border-box;
   font-style: normal;
   font-variation-settings: "slnt" 0;
 }
-body{
-  a {
-    text-decoration: none;
-    color: #0f0f0f;
-  }
+.main{
+  margin-top: 50px;
+}
+a {
+  text-decoration: none;
+  color: #0f0f0f;
+}
   a:hover {
   color: #FB43B0;
 }
   a:active {
   color: #4962E9;
-}}
+  }
+  .indietro{
+    margin-top: 50px;
+  }
+
 form {
   display: flex;
+  width: 100%;
   flex-direction: column;
+  
 }
