--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,4 +1,6 @@
+// da rivedere
 @use 'form';
+
 * {
     padding: 0;
     margin: 50;
@@ -23,8 +25,8 @@
 
 $font-stack: 'Inter', sans-serif;
 $accent-color: #FB43B0;
-$primary-color: #18678b;
-$secondary-color: #4962E9;
+$primary-color: #4c8db3;
+$secondary-color: #75AAC9;
 $black-color: #0f0f0f;
 $white-color: #fdfdfd;
 
