--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,7 +164,7 @@
 
 * {
   padding: 0;
-  margin: 0;
+  margin: 50;
   box-sizing: border-box;
 }
 
@@ -190,7 +190,7 @@ a :hover {
   color: #FB43B0;
 }
 a :active {
-  color: #4962E9;
+  color: #75AAC9;
 }
 
 *, *:before, *:after {
@@ -282,12 +282,12 @@ h6 {
   align-self: start;
 }
 .hero .tags .tag-1 {
-  background-color: #18678b;
+  background-color: #4c8db3;
   padding: 10px;
   border-radius: 10px;
 }
 .hero .tags .tag-2 {
-  background-color: #4962E9;
+  background-color: #75AAC9;
   padding: 10px;
   border-radius: 10px;
 }
@@ -344,7 +344,7 @@ h6 {
 }
 
 .card:active {
-  color: #4962E9;
+  color: #75AAC9;
 }
 
 .altro {
@@ -373,11 +373,4 @@ footer {
   list-style-type: none;
   padding: 0;
   margin: 0;
-}
-
-@media only screen and (max-width: 450) {
-  body .hero {
-    margin: 0;
-    color: red;
-  }
 }
