--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,21 +275,25 @@ h6 {
 .hero .tags {
   display: flex;
   font-size: xx-small;
-  gap: 10px;
+  gap: 12px;
   color: #fdfdfd;
-  border-radius: 10px;
+  border-radius: 12px;
   justify-content: center;
   align-self: start;
 }
 .hero .tags .tag-1 {
   background-color: #4c8db3;
-  padding: 10px;
-  border-radius: 10px;
+  padding: 12px;
+  border-radius: 12px;
 }
 .hero .tags .tag-2 {
   background-color: #75AAC9;
-  padding: 10px;
-  border-radius: 10px;
+  padding: 12px;
+  border-radius: 12px;
+}
+
+h1 {
+  margin-top: 20px;
 }
 
 .links {
@@ -303,7 +307,7 @@ h6 {
   justify-content: center;
   display: flex;
   margin-top: 20px;
-  gap: 10px;
+  gap: 12px;
 }
 .links .link-linkedin,
 .links .link-behance,
@@ -311,7 +315,7 @@ h6 {
   aspect-ratio: 1;
   object-fit: auto;
   object-position: center;
-  width: 30px;
+  width: 36px;
 }
 
 .projects-section {
