--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -98,24 +98,27 @@ h1{font-size: 3rem;} h2{font-size: 1.8rem;} h3{font-size: 1.2rem;} h4{font-size:
         .tags {
             display: flex;
             font-size: xx-small;
-            gap: 10px;
+            gap: 12px;
             color: $white-color;
-            border-radius: 10px;
+            border-radius: 12px;
             justify-content: center;
             align-self: start;
             .tag-1 {
                 background-color: $primary-color;
-                padding: 10px;
-                border-radius: 10px;
+                padding: 12px;
+                border-radius: 12px;
 
             }
             .tag-2{
                 background-color: $secondary-color;
-                padding: 10px;
-                border-radius: 10px;
+                padding: 12px;
+                border-radius: 12px;
 
             }
         }}
+    h1{
+        margin-top: 20px;
+    }
     .links {
         align-items: start;
         display: flex;
@@ -126,7 +129,7 @@ h1{font-size: 3rem;} h2{font-size: 1.8rem;} h3{font-size: 1.2rem;} h4{font-size:
         justify-content: center;
         display: flex;
         margin-top: 20px;
-        gap: 10px;
+        gap: 12px;
         }
         .link-linkedin,
         .link-behance,
@@ -134,7 +137,7 @@ h1{font-size: 3rem;} h2{font-size: 1.8rem;} h3{font-size: 1.2rem;} h4{font-size:
           aspect-ratio: 1;
           object-fit: auto;
           object-position: center;
-          width: 30px;
+          width: 36px;
           }}
       
 .projects-section {
