--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,11 @@
 // da rivedere
 @use 'form';
-
+@import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
+.dm-mono-medium {
+    font-family: "DM Mono", monospace;
+    font-weight: 500;
+    font-style: normal;
+  }
 * {
     padding: 0;
     margin: 50;
@@ -31,8 +36,8 @@ $black-color: #0f0f0f;
 $white-color: #fdfdfd;
 
 body { 
-    background-color: $white-color;
     font-family: $font-stack, Arial, Helvetica, sans-serif;
+    background-color: $white-color;
     font-size: 16px;
 }
 a {
@@ -43,11 +48,16 @@ a {
     }
     :active{
         color: $secondary-color;
-
     }
 }
 *,*:before,*:after{ box-sizing: border-box; }
-h1,h2,h3,h4,h5,h6, p, ol, ul {margin: 0;padding: 0;}
+h1, h2, h3,h4,h5,h6, {
+    margin: 0px, 0px, 0px, 0px
+}
+p, ol, ul {
+    margin: 0;
+    padding: 0;
+}
 ol,ul {list-style-type: none;}
 h1{font-size: 3rem;} h2{font-size: 1.8rem;} h3{font-size: 1.2rem;} h4{font-size: 1rem;} h5{font-size: 0.8rem;} h6{font-size: 0.6rem;}
 
@@ -75,7 +85,7 @@ h1{font-size: 3rem;} h2{font-size: 1.8rem;} h3{font-size: 1.2rem;} h4{font-size:
         justify-content: center;
         align-items: center;
         display: flex;
-        gap: 10px;
+        gap: 24px;
         // .toggle-dark {
         //     aspect-ratio: 1;
         //     width: 25px;
@@ -83,12 +93,12 @@ h1{font-size: 3rem;} h2{font-size: 1.8rem;} h3{font-size: 1.2rem;} h4{font-size:
         .btn {
         font-family: $font-stack;
         justify-content: center;
-        border-radius: 10px;
+        border-radius: 8px;
         background-color: $accent-color;
         color: $white-color;
         align-self: stretch;
         white-space: nowrap;
-        padding: 5px;
+        padding: 4px;
       }}
     
 .hero {
@@ -107,13 +117,11 @@ h1{font-size: 3rem;} h2{font-size: 1.8rem;} h3{font-size: 1.2rem;} h4{font-size:
                 background-color: $primary-color;
                 padding: 12px;
                 border-radius: 12px;
-
             }
             .tag-2{
                 background-color: $secondary-color;
                 padding: 12px;
                 border-radius: 12px;
-
             }
         }}
     h1{
@@ -137,24 +145,30 @@ h1{font-size: 3rem;} h2{font-size: 1.8rem;} h3{font-size: 1.2rem;} h4{font-size:
           aspect-ratio: 1;
           object-fit: auto;
           object-position: center;
-          width: 36px;
-          }}
-      
-.projects-section {
-    padding: 0;
+          width: 36px;}}
+          
+    .cv-links{
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+         .github,.linkedin { 
+              width: 24px;}
+        }
+          .projects-section {
     .card{
-        padding: 40px;
-        border-radius: 10px;
+        padding: 32px;
+        margin: 0px 0px 0px 0px;
+        border-radius: 12px;
         overflow: hidden;   // maschera l'immagine con la card
-        background-color: transparent;
+        background-color: $white-color;
         border: none;
-        // margin: 0 15px 30px 15px;
+        // box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+        height: fit-content;
         // min-height: 450px; 
-        
         .card__img{
             min-height:200px;
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
+            border-top-left-radius: 8px;
+            border-top-right-radius: 8px;
             display: block;
             background-position: center center;
             background-size:cover;
@@ -163,7 +177,7 @@ h1{font-size: 3rem;} h2{font-size: 1.8rem;} h3{font-size: 1.2rem;} h4{font-size:
 .card:hover {
     color: $accent-color;
     background-color: white;
-    box-shadow: 0 5px 20px rgba(0,0,0,.1);
+    box-shadow: 0 4px 20px rgba(0,0,0,0.3);
     transform: scale(1.1); /* Modifica la grandezza dell'immagine */
     transition: transform 0.2s ease; 
     z-index: 2;
