--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -51,13 +51,10 @@ a {
     }
 }
 *,*:before,*:after{ box-sizing: border-box; }
-h1, h2, h3,h4,h5,h6, {
-    margin: 0px, 0px, 0px, 0px
-}
+
 p, ol, ul {
     margin: 0;
-    padding: 0;
-}
+    padding: 0;}
 ol,ul {list-style-type: none;}
 h1{font-size: 3rem;} h2{font-size: 1.8rem;} h3{font-size: 1.2rem;} h4{font-size: 1rem;} h5{font-size: 0.8rem;} h6{font-size: 0.6rem;}
 
