--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,10 +194,11 @@ a {
   color: #0f0f0f;
 }
 a :hover {
-  color: #FB43B0;
+  color: #fdfdfd;
+  background-color: #8d165e;
 }
 a :active {
-  color: #75AAC9;
+  background-color: #5688F4;
 }
 
 *, *:before, *:after {
@@ -241,6 +242,10 @@ h6 {
   font-size: 0.6rem;
 }
 
+.cv-image {
+  height: 50%;
+}
+
 .nav-container {
   width: 100%;
   gap: 20px;
@@ -267,15 +272,22 @@ h6 {
   display: flex;
   gap: 24px;
 }
-.nav-container .btn {
-  font-family: "Inter", sans-serif;
-  justify-content: center;
-  border-radius: 8px;
+
+.btn, button {
   background-color: #FB43B0;
+  font-family: "Inter", sans-serif;
   color: #fdfdfd;
-  align-self: stretch;
+  display: flex;
+  justify-content: center;
+  width: auto;
+  border-radius: 12px;
   white-space: nowrap;
-  padding: 4px;
+}
+
+.cv {
+  display: flex;
+  justify-content: center;
+  margin-top: 64px;
 }
 
 .hero {
@@ -293,12 +305,12 @@ h6 {
   align-self: start;
 }
 .hero .tags .tag-1 {
-  background-color: #4c8db3;
+  background-color: #5688F4;
   padding: 12px;
   border-radius: 12px;
 }
 .hero .tags .tag-2 {
-  background-color: #75AAC9;
+  background-color: #9B8DEC;
   padding: 12px;
   border-radius: 12px;
 }
@@ -359,15 +371,15 @@ h1 {
 
 .card:hover {
   color: #FB43B0;
-  background-color: white;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+  background-color: #fdfdfd;
+  box-shadow: 0 4px 20px #0f0f0f;
   transform: scale(1.1); /* Modifica la grandezza dell'immagine */
   transition: transform 0.2s ease;
   z-index: 2;
 }
 
 .card:active {
-  color: #75AAC9;
+  color: #9B8DEC;
 }
 
 .altro {
@@ -386,6 +398,9 @@ footer {
   color: #0f0f0f;
   margin-top: 20px;
   padding: 40px;
+  /*=============================================
+  =            Fields           =
+  =============================================*/
 }
 .footer p {
   color: #0f0f0f;
@@ -396,4 +411,149 @@ footer {
   list-style-type: none;
   padding: 0;
   margin: 0;
+}
+.footer .formcarry-container {
+  box-sizing: border-box;
+  margin: 40px auto 0 auto;
+  padding: 0;
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: -0.01em;
+  width: 400px;
+  /* NORMAL */
+  --fc-border-color: #ECEFF9;
+  --fc-normal-text-color: #0E0B3D;
+  --fc-normal-placeholder-color: #B3B8D0;
+  /* PRIMARY COLOR | HSL FORMAT*/
+  --fc-primary-color-hue: 220;
+  --fc-error-color-hue: 356;
+  --fc-primary-hsl: var(--fc-primary-color-hue), 100%, 54%;
+  --fc-error-hsl: var(--fc-error-color-hue), 100%, 54%;
+  /* HOVER */
+  --fc-field-hover-bg-color: #96559c;
+  --fc-border-hover-color: #DDE0EE;
+  --fc-field-hover-text-color: #B3B8D0;
+  --fc-border-active-color: $accent-color;
+}
+.footer .formcarry-container * {
+  box-sizing: border-box;
+}
+.footer .formcarry-container label {
+  display: block;
+  cursor: pointer;
+}
+.footer .formcarry-container .formcarry-block:not(:first-child) {
+  margin-top: 16px;
+}
+.footer .formcarry-container input,
+.footer .formcarry-container textarea,
+.footer .formcarry-container select {
+  margin-top: 4px;
+  width: 100%;
+  height: 42px;
+  border: 1px solid var(--fc-border-color);
+  color: var(--fc-normal-text-color);
+  border-radius: 6px;
+  padding: 8px 12px;
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  transition: 125ms background, 125ms color, 125ms box-shadow;
+}
+.footer .formcarry-container textarea {
+  min-height: 188px;
+  max-width: 100%;
+  padding-top: 12px;
+}
+.footer .formcarry-container input::placeholder,
+.footer .formcarry-container textarea::placeholder,
+.footer .formcarry-container select::placeholder {
+  color: var(--fc-normal-placeholder-color);
+}
+.footer .formcarry-container input:hover,
+.footer .formcarry-container textarea:hover,
+.footer .formcarry-container select:hover {
+  border-color: var(--fc-border-hover-color);
+  background-color: var(--fc-field-hover-bg-color);
+}
+.footer .formcarry-container input:hover::placeholder,
+.footer .formcarry-container textarea:hover::placeholder,
+.footer .formcarry-container select:hover::placeholder {
+  color: var(--fc-field-hover-text-color);
+}
+.footer .formcarry-container input:focus,
+.footer .formcarry-container textarea:focus,
+.footer .formcarry-container select:focus {
+  background-color: #fff;
+  border-color: hsl(var(--fc-primary-hsl));
+  box-shadow: hsla(var(--fc-primary-hsl), 8%) 0px 0px 0px 3px;
+  outline: none;
+}
+.footer .formcarry-container select {
+  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11.9997 14.5001L8.46387 10.9642L9.64303 9.78589L11.9997 12.1434L14.3564 9.78589L15.5355 10.9642L11.9997 14.5001Z' fill='%236C6F93'/%3E%3C/svg%3E%0A");
+  /* background-position: calc(100% - 20px) calc(1em + 4px), calc(100% - 15px) calc(1em + 4px); */
+  background-size: 24px 24px;
+  background-position: 98%;
+  background-repeat: no-repeat;
+  appearance: none;
+  -webkit-appearance: none;
+}
+.footer .formcarry-container button {
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: -0.02em;
+  height: 42px;
+  line-height: 40px;
+  width: 100%;
+  border-radius: 6px;
+  box-sizing: border-box;
+  border: 1px solid hsla(var(--fc-primary-hsl));
+  background-color: hsla(var(--fc-primary-hsl));
+  color: #fff;
+  cursor: pointer;
+}
+.footer .formcarry-container button {
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: -0.02em;
+  height: 40px;
+  line-height: 24px;
+  width: 100%;
+  border: 0;
+  border-radius: 6px;
+  box-sizing: border-box;
+  background-color: hsla(var(--fc-primary-hsl));
+  color: #fff;
+  cursor: pointer;
+  box-shadow: 0 0 0 0 transparent;
+  transition: 125ms all;
+}
+.footer .formcarry-container button:hover {
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), hsla(var(--fc-primary-hsl));
+}
+.footer .formcarry-container button:focus {
+  background: linear-gradient(0deg, rgba(1, 4, 134, 0.2), rgba(40, 11, 119, 0.2)), hsla(var(--fc-primary-hsl));
+  border-inline: 1px solid inline rgba(255, 255, 255, 0.6);
+  box-shadow: 0px 0px 0px 3px rgba(var(--fc-primary-hsl), 12%);
+}
+.footer .formcarry-container button:active {
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), hsla(var(--fc-primary-hsl));
+}
+.footer .formcarry-container button:disabled {
+  background-color: hsla(var(--fc-primary-hsl), 40%);
+  cursor: not-allowed;
+}
+.footer .formcarry-container input:focus:required:invalid,
+.footer .formcarry-container input:focus:invalid,
+.footer .formcarry-container select:focus:required:invalid,
+.footer .formcarry-container select:focus:invalid {
+  color: hsl(var(--fc-error-hsl));
+  border-color: hsl(var(--fc-error-hsl));
+  box-shadow: 0px 0px 0px 3px hsla(var(--fc-error-hsl), 12%);
+}
+.footer .indietro {
+  margin-bottom: 40px;
 }
