--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,12 +193,12 @@ a {
   text-decoration: none;
   color: #0f0f0f;
 }
-a :hover {
-  color: #fdfdfd;
-  background-color: #8d165e;
-}
 a :active {
   background-color: #5688F4;
+}
+a :active :hover {
+  color: #fdfdfd;
+  background-color: #8d165e;
 }
 
 *, *:before, *:after {
@@ -297,7 +297,7 @@ h6 {
 }
 .hero .tags {
   display: flex;
-  font-size: xx-small;
+  font-size: small;
   gap: 12px;
   color: #fdfdfd;
   border-radius: 12px;
@@ -372,7 +372,7 @@ h1 {
 .card:hover {
   color: #FB43B0;
   background-color: #fdfdfd;
-  box-shadow: 0 4px 20px #0f0f0f;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
   transform: scale(1.1); /* Modifica la grandezza dell'immagine */
   transition: transform 0.2s ease;
   z-index: 2;
