--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -120,19 +120,21 @@ h1{font-size: 3rem;} h2{font-size: 1.8rem;} h3{font-size: 1.2rem;} h4{font-size:
             display: flex;
             font-size: small;
             gap: 12px;
-            color: $white-color;
             border-radius: 12px;
             justify-content: center;
             align-self: start;
             .tag-1 {
-                background-color: $primary-color;
-                padding: 12px;
+                color: $primary-color;
+                border: 2px, solid $primary-color;
                 border-radius: 12px;
+                padding: 3px;
             }
             .tag-2{
-                background-color: $secondary-color;
-                padding: 12px;
+                color: $secondary-color; 
+                border: 2px, solid $secondary-color;
                 border-radius: 12px;
+                padding: 3px;
+                text-align: center;
             }
         }}
     h1{
