--- a/assets/scss/_form.scss
+++ b/assets/scss/_form.scss
@@ -1,5 +1,5 @@
    
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
 
 .formcarry-container {
   box-sizing: border-box;
@@ -10,7 +10,6 @@
   font-weight: 400;
   line-height: 24px;
   letter-spacing: -0.01em;
-
   width: 400px;
 
   /* NORMAL */
