--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,7 +1,7 @@
 @use 'form';
 
 @font-face {
-  font-family: 'U';
+  font-family: 'Inter';
   src: url('../assets/font/Inter/Inter-VariableFont_slnt\,wght.ttf');
   src: local('Inter'), url('../font/Inter/Inter-VariableFont_slnt\,wght.ttf') format('truetype');
 }
