--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,7 +162,7 @@
 }
 
 @font-face {
-  font-family: "U";
+  font-family: "Inter";
   src: url("../assets/font/Inter/Inter-VariableFont_slnt,wght.ttf");
   src: local("Inter"), url("../font/Inter/Inter-VariableFont_slnt,wght.ttf") format("truetype");
 }
